// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Extensions > renders with empty extensions 1`] = `
<div>
  <nav
    aria-label="Extensions"
    class="StyledBox-sc-13pk1d4-0 eznImF extension-root overflow-x-hidden"
  />
</div>
`;

exports[`Extensions > renders with mixed extensions 1`] = `
<div>
  <nav
    aria-label="Extensions"
    class="StyledBox-sc-13pk1d4-0 eznImF extension-root overflow-x-hidden"
  >
    <button
      class="StyledButton-sc-323bzc-0 jLPXpV"
      type="button"
    >
      Ext1
    </button>
  </nav>
</div>
`;

exports[`Extensions > renders with valid extensions 1`] = `
<div>
  <nav
    aria-label="Extensions"
    class="StyledBox-sc-13pk1d4-0 eznImF extension-root overflow-x-hidden"
  >
    <button
      class="StyledButton-sc-323bzc-0 jLPXpV"
      type="button"
    >
      Ext1
    </button>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hrJqFx"
    />
    <button
      class="StyledButton-sc-323bzc-0 jLPXpV"
      type="button"
    >
      Ext2
    </button>
  </nav>
</div>
`;
